    + [NT] Mention that cme can automate fixing some perl
      related tags.  Thanks to gregor herrmann for the report
      and patch.  (Closes: #680446)

  * data/doc-base/sections:
    + [NT] Update section list.  (Closes: #678650)

  * debian/changelog:
    + [NT] Fix some typos in earlier entries.

  * frontend/lintian:
    + [NT] Fix synopsis for --no-cfg option in the help output.

 -- Niels Thykier <niels@thykier.net>  Tue, 10 Jul 2012 13:21:56 +0200

lintian (2.5.10) unstable; urgency=low

  * Summary of tag changes:
    + Added:
      - incompatible-java-bytecode-format
      - unknown-java-class-version

  * checks/changes-file.desc:
    + [NT] Fix typo in tag description.  Thanks to Luca
      Falavigna for spotting it.
  * checks/files:
    + [NT] Use new gzip decompressor from L::Util.
  * checks/java{,.desc}:
    + [NT] Catch unknown Java class versions.
    + [NT] Catch uses of Java7 byte code as an experimental
      check.  It lacks the proper checks for cases where
      packages have the proper dependencies for Java7 byte
      code.  (Closes: #673276)

  * collection/*:
    + [NT] Add missing load of the FileHandle module.
  * collection/java-info{,.desc}:
    + [NT] Use Archive::Zip instead of zipinfo + unzip to
      extract information from Jar files.
    + [NT] Limit java-info to files classified as "Zip Archive"
      by file(1).
  * collection/objdump-info:
    + [NT] Only call readelf once per binary.
    + [NT] Use xargs + a new helper to reduce the number of
      readelf calls even further.
  * collection/objdump-info-helper:
    + [NT] New file.
  * collection/strings:
    + [NT] Optimize for the "common case" file names with a
      fall-back to previous behaviour with special file names.
  * collection/strings-helper:
    + [NT] New file.

  * debian/control:
    + [NT] Add (Build-)Dependency on libarchive-zip-perl.
    + [NT] Remove runtime dependency on unzip (replaced by
      libarchive-zip-perl).