@@ -14,6 +14,10 @@ lintian (2.5.10.1) UNRELEASED; urgency=low
   * frontend/lintian:
     + [NT] Fix synopsis for --no-cfg option in the help output.
 
+  * lib/Lintian/Architecture.pm:
+    + [NT] Properly handle cases like "linux-amd64" being an
+      alias of "amd64".
+
  -- Niels Thykier <niels@thykier.net>  Tue, 10 Jul 2012 13:21:56 +0200
 
 lintian (2.5.10) unstable; urgency=low
